added signup and sign in feature, added pagination, added image uploader

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -20,12 +20,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
 
-          <h1>Basic Actions</h1>
           
-           <a href="/dashboard">  <button class="btn btn-primary"> Dashboard Home</button></a>
-           <a href="/logout">  <button class="btn btn-primary"> Logout</button></a>
-           <hr>
-<h1>Add/Edit Post</h1>
+<h1>Add Post</h1>
 
 
  <form name="sentMessage" id="contactForm" action = "/edit/{{sno}}" method="post" novalidate>
