--- a/templates/contact.html
+++ b/templates/contact.html
@@ -56,7 +56,7 @@
             <br>
             <div id="success"></div>
             <div class="form-group">
-              <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+              <button type="submit" class="btn btn-success rounded" id="sendMessageButton">Send</button>
             </div>
           </form>
         </div>
