--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,7 +2,7 @@
 {% block body %}
 
     <!-- Page Header -->
-      <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/contact-bg.jpg') }}')">
+      <header class="masthead mb-0" style="background-image: url('{{ url_for('static', filename='img/contact-bg.jpg') }}')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -17,7 +17,8 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container">
+    <div class="bg-light py-5">
+    <div class="container bg-white shadow py-5">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
@@ -62,5 +63,6 @@
         </div>
       </div>
     </div>
+  </div>
 
    {% endblock %}
