--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/about-bg.jpg') }}')">
+    <header class="masthead mb-0" style="background-image: url('{{ url_for('static', filename='img/about-bg.jpg') }}')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -16,14 +16,15 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container">
+    <div class="bg-light py-5">
+    <div class="container bg-white shadow py-5">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+          <p>A tech enthusiast who loves to work on projects. 3rd year B.tech guy who is fed up of doing assignments. </p>
+    
         </div>
       </div>
     </div>
+  </div>
 
    {% endblock %}
