--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/home-bg.jpg') }}')">
+    <header class="masthead mb-0" style="background-image: url('{{ url_for('static', filename='img/home-bg.jpg') }}')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -16,15 +16,17 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container">
+    <div class="bg-light pb-5 pt-5">
+
+    <div class="container bg-white shadow py-5">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
 
           
-<h1>Add Post</h1>
+<h1>Add/Edit Post</h1>
 
 
- <form name="sentMessage" id="contactForm" action = "/edit/{{sno}}" method="post" novalidate>
+ <form name="sentMessage" id="contactForm" action = "/edit/{{sno}}" method="post" novalidate enctype="multipart/form-data">
             <div class="control-group">
               <div class="form-group floating-label-form-group controls">
                 <label>Title</label>
@@ -47,18 +49,43 @@
               </div>
             </div>
             <div class="control-group">
+              <div class="form-group col-xs-12 floating-label-form-group controls">
+               
+                <!-- <input type="text" class="form-control" placeholder="Category" name="category" id="category" required data-validation-required-message="Please enter category." value="{{post.category}}">
+                <p class="help-block text-danger"></p> -->
+                    <p class="ptag">Category</p>  
+                    <select class="form-control" placeholder="Category" id="category" required value="{{post.category}}">
+                      <option>education</option>
+                      <option>environment</option>
+                      <option>health</option>
+                      <option>technology</option>
+                      <option>other</option>
+                    </select>
+              </div>
+            </div>
+
+
+            <div class="control-group">
               <div class="form-group floating-label-form-group controls">
                 <label>content</label>
                 <textarea rows="5" class="form-control" placeholder="Content" name = "content" id="content" required data-validation-required-message="Please enter a message.">{{post.content}}</textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
+            
 
             <div class="control-group">
               <div class="form-group floating-label-form-group controls">
                 <label>Image File</label>
-                <input class="form-control" placeholder="Image Filename" name = "img_file" id="img_file" value="{{post.img_file}}">
-                <p class="help-block text-danger"></p>
+                <!-- <input class="form-control" placeholder="Image Filename" name = "img_file" id="img_file" value="{{post.img_file}}">
+                <p class="help-block text-danger"></p> -->
+
+
+              
+              
+              <input type="file" name="img_file">
+              
+              
               </div>
             </div>
 
@@ -66,7 +93,7 @@
             <br>
             <div id="success"></div>
             <div class="form-group">
-              <button type="submit" class="btn btn-primary" id="sendMessageButton">Submit</button>
+              <button type="submit" class="btn btn-success rounded" id="sendMessageButton">Submit</button>
             </div>
           </form>
 
