--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,12 +14,13 @@
 
     <!-- Custom fonts for this template -->
     <link href="{{ url_for('static', filename='vendor/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='css/clean-blog.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/custom3.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom4.css') }}" rel="stylesheet">
 
   </head>
 
@@ -39,8 +40,21 @@
               <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dashboard">Dashboard</a>
+              <a class="nav-link" href="/environment">Environment</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/education">Education</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="/technology">Technology</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/health">Health</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/other">Others</a>
+            </li>
+            
             <li class="nav-item">
               <a class="nav-link" href="/about">About</a>
             </li>
@@ -48,7 +62,10 @@
               <a class="nav-link" href="/contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link btn btn-success rounded text-white" href="/{{url}}">{{var}}</a>
+              <a class="nav-link btn btn-success rounded text-white mr-3" href="/dashboard">Dashboard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-success rounded text-white float-left" href="/{{url}}">{{var}}</a>
             </li>
           </ul>
         </div>
@@ -72,8 +89,8 @@
 
       <!-- Grid column -->
       <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold">Environmental Blog</h6>
-        <p>A transition to clean energy is about making an investment in our future</p>
+        <h6 class="text-uppercase mb-4 font-weight-bold">The Bloggers</h6>
+        <p>Unleash the potential blogger inside you</p>
       </div>
       <!-- Grid column -->
 
@@ -81,19 +98,17 @@
 
       <!-- Grid column -->
       <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 text-white productso">
-        <h6 class="text-uppercase mb-4 font-weight-bold">Solar energy</h6>
-        <p>
-          Wind energy
-        </p>
-        <p>
-          Hydro energy
-        </p>
-        <p>
-          Tidal energy
-        </p>
-        <p>
-          Biomass
-        </p>
+        <h6 class="text-uppercase mb-4 font-weight-bold">Categories</h6>
+        <p><a href="/education" class="text-white my-3">
+          Education
+        </a></p>
+        <p><a href="/environment" class="text-white my-3">
+          Environment
+        </a></p>
+        <p><a href="/technology" class="text-white my-3">
+          Technology
+        </a></p>
+        
       </div>
       <!-- Grid column -->
 
@@ -115,7 +130,7 @@
       <div id="contact" class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 text-white text-left homefont">
         <h6 class="text-uppercase text-left mb-4 font-weight-bold">Contact</h6>
         <p>
-          <i class="fas fa-home mr-3"></i> CleanEnvironment corporation</p>
+          <i class="fas fa-home mr-3"></i> TheBloggers corporation</p>
         <p>
           <i class="fas fa-envelope mr-3"></i> gkr54322@gmail.com</p>
        
@@ -139,7 +154,7 @@
         <!--Copyright-->
         <p class="text-center text-md-left">© 2020 Copyright:
           <a href="#!" class="text-white">
-            <strong> clean.com</strong>
+            <strong> TheBloggers.com</strong>
           </a>
         </p>
 
