--- a/templates/post.html
+++ b/templates/post.html
@@ -8,7 +8,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="post-heading">
+            <div class="post-heading" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
               <h1>{{post.title}}</h1>
               <h2 class="subheading">{{post.tagline}}</h2>
               <span class="meta">Posted by
@@ -22,8 +22,8 @@
 
     <!-- Post Content -->
     <article>
-       <div class="bg-light py-5">
-    <div class="container bg-white shadow py-5">
+       <div class="bg-light py-5" data-aos="fade-up"> 
+    <div class="container bg-white shadow py-5" data-aos="fade-up">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             {{post.content}}
