--- a/templates/template.html
+++ b/templates/template.html
@@ -5,7 +5,7 @@
     <header class="masthead mb-0" style="background-image: url('{{ url_for('static', filename=fname) }}')">
       <div class="overlay"></div>
       <div class="container">
-        <div class="row">
+        <div class="row" data-aos="fade-up"  data-aos-duration="1000">
           <div class="col-lg-8 col-md-10 mx-auto">
             
             <div class="site-heading">
@@ -18,8 +18,46 @@
     </header>
 
     <!-- Main Content -->
-    <div class="addpost"><a href="/dashboard"><i class="fas fa-plus-circle"></i></a></div>
+    
     <div class="bg-light py-5">
+      <div class="addpost"><a href="/dashboard"><i class="fas fa-plus-circle"></i></a></div>
+      <main>
+
+            <!-- --------------------- Blog Carousel ----------------- -->
+            
+           <section class="bag-image">
+            <div class="blog">
+              
+                <!-- <div class="container"> -->
+                 
+                    <div class="owl-carousel owl-theme blog-post">
+                      
+                      {% for post in posts %} 
+                      {% set fname = 'uploaded/'+  post.img_file  %}
+                      <a href="/post/{{post.slug}}">
+                        <div class="blog-content" data-aos="fade-left" data-aos-delay="200">
+                            <img src="{{ url_for('static', filename=fname) }}" alt="post-1" class="image-owl">
+                            <div class="blog-title">
+                                <h3>{{ post.title }}</h3>
+                                <button class="btn btn-blog">{{ post.category }}</button>
+                                <span>Posted by {{post.poster}}</span>
+                            </div>
+                        </div>
+                      </a>
+                      {% endfor %}
+                      
+                    </div>
+              </div>
+                     
+                
+        </section>
+      </main>
+    </div>
+      
+      
+        <!-- ----------x---------- Blog Carousel --------x-------- -->
+
+      
     <div class="container bg-white shadow py-5">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
@@ -28,7 +66,7 @@
      <!-- Todo: Fetch it using for loop from the database -->
 
      {% for post in posts %}    
-          <div class="post-preview mb-3">
+          <div class="post-preview mb-3" data-aos="fade-up">
             
             <a href="/post/{{post.slug}}">
               <h2 class="post-title">{{ post.title }}
@@ -39,16 +77,17 @@
                 {{post.tagline}}
               </h3>
               {% set fname = 'uploaded/'+  post.img_file  %}
-              <img src="{{ url_for('static', filename=fname) }}" class="img-fluid">
+              <div class="overflow-hidden" data-aos="zoom-in"><img src="{{ url_for('static', filename=fname) }}" class="img-fluid div-image"></div>
             
-            <p class="post-meta">Posted by
+            <p class="post-meta ">Posted by
               <a href="#">{{post.poster}}</a>
               on {{post.date}}</p>
 
-          </div>
+          
 
           {{post.content[0:243]}}...
         </a>
+        </div>
           <hr class="mb-5">
 
           {% endfor %}
@@ -56,11 +95,13 @@
 
           <!-- Pager -->
           <div class="clearfix">
-            <a class="btn btn-success rounded float-left" href="{{prev}}"> &larr;Previous</a>
-            <a class="btn btn-success rounded float-right" href="{{next}}">Next &rarr;</a>
+            <a class="btn btn-success rounded float-left" href="{{prev}} " data-aos="zoom-in-right"> &larr;Previous</a>
+            <a class="btn btn-success rounded float-right" href="{{next}}" data-aos="zoom-in-left">Next &rarr;</a>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  
+
+
     {% endblock %}
