--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="page-heading">
+            <div class="page-heading" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
               <h1>About Me</h1>
               <span class="subheading">This is what I do.</span>
             </div>
@@ -19,7 +19,7 @@
     <div class="bg-light py-5">
     <div class="container bg-white shadow py-5">
       <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="col-lg-8 col-md-10 mx-auto" data-aos="fade-up">
           <p>A tech enthusiast who loves to work on projects. 3rd year B.tech guy who is fed up of doing assignments. </p>
     
         </div>
