--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - Start Bootstrap Theme</title>
+    <title>The Bloggers</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -15,12 +15,20 @@
     <!-- Custom fonts for this template -->
     <link href="{{ url_for('static', filename='vendor/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,700;1,900&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    
+    <!-- --------- Owl-Carousel ------------------->
+    <link rel="stylesheet" href="../static/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../static/css/owl.theme.default.min.css">
+
+    <!-- aos library -->  
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', filename='css/clean-blog.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/custom4.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/clean-blog2.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom20.css') }}" rel="stylesheet">
 
   </head>
 
@@ -65,7 +73,7 @@
               <a class="nav-link btn btn-success rounded text-white mr-3" href="/dashboard">Dashboard</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link btn btn-success rounded text-white float-left" href="/{{url}}">{{var}}</a>
+              <a class="nav-link btn btn-success rounded text-white mr-3 " href="/{{url}}">{{var}}</a>
             </li>
           </ul>
         </div>
@@ -88,7 +96,7 @@
     <div class="row text-center text-md-left mt-3 pb-3">
 
       <!-- Grid column -->
-      <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+      <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3" data-aos="fade-right" data-aos-delay="200">
         <h6 class="text-uppercase mb-4 font-weight-bold">The Bloggers</h6>
         <p>Unleash the potential blogger inside you</p>
       </div>
@@ -97,7 +105,7 @@
       <hr class="w-100 clearfix d-md-none">
 
       <!-- Grid column -->
-      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 text-white productso">
+      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 text-white productso" data-aos="fade-right" data-aos-delay="200">
         <h6 class="text-uppercase mb-4 font-weight-bold">Categories</h6>
         <p><a href="/education" class="text-white my-3">
           Education
@@ -115,7 +123,7 @@
       <hr class="w-100 clearfix d-md-none">
 
       <!-- Grid column -->
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3 links text-white">
+      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3 links text-white" data-aos="fade-left" data-aos-delay="200">
         <h6 class="text-uppercase mb-4 font-weight-bold"> Creator</h6>
         <p>
         Gunjan Kumar
@@ -127,7 +135,7 @@
       <hr class="w-100 clearfix d-md-none">
 
       <!-- Grid column -->
-      <div id="contact" class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 text-white text-left homefont">
+      <div id="contact" class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 text-white text-left homefont" data-aos="fade-left" data-aos-delay="200">
         <h6 class="text-uppercase text-left mb-4 font-weight-bold">Contact</h6>
         <p>
           <i class="fas fa-home mr-3"></i> TheBloggers corporation</p>
@@ -149,7 +157,7 @@
     <div class="row d-flex align-items-center">
 
       <!-- Grid column -->
-      <div class="col-md-7 col-lg-8">
+      <div class="col-md-7 col-lg-8" >
 
         <!--Copyright-->
         <p class="text-center text-md-left">© 2020 Copyright:
@@ -162,7 +170,7 @@
       <!-- Grid column -->
 
       <!-- Grid column -->
-      <div class="col-md-5 col-lg-4 ml-lg-0">
+      <div class="col-md-5 col-lg-4 ml-lg-0" >
 
         <!-- Social buttons -->
         <div class="text-center text-md-right socialo">
@@ -203,13 +211,24 @@
 </footer>
 
 <!-- Footer -->
-
+    
     <!-- Bootstrap core JavaScript -->
     <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
 
+    <!-- Aos library -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
+    <!-- --------- Owl-Carousel js ------------------->
+    <script src="../static/js/owl.carousel.min.js"></script>
     <!-- Custom scripts for this template -->
     <script src="{{ url_for('static', filename='js/clean-blog.min.js') }}"></script>
+    <!-- custom js -->
+    <script src="{{ url_for('static', filename='js/custom4noautoplay6.js') }}"></script>
+    <!-- <script>$('.owl-carousel').owlCarousel();</script> -->
+
 
   </body>
 
