--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,10 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8"> -->
+	  <meta name="viewport" content="width-device-width, initial-scale=1.0 shrink-to-fit=yes">
+	  <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -28,7 +31,7 @@
 
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='css/clean-blog2.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/custom20.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom23.css') }}" rel="stylesheet">
 
   </head>
 
